# vetero

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Doxyfile  README.md  config.h.in
cmake/: FindGettext.cmake  Findlibusb.cmake  Findlibusb1.cmake  Findserdisplib.cmake  ptxdist-toolchain-dockstar.cmake
doc/: CMakeLists.txt  Database.md  Database.txt  USB-WDE01.txt
doc/user/: CMakeLists.txt  Vetero.txt
ext/: libbw
po/: CMakeLists.txt
po/vetero-displayd/: CMakeLists.txt  de.po  vetero-displayd.pot
po/vetero-reportgen/: CMakeLists.txt  de.po  vetero-reportgen.pot
scripts/: convert_db.py  convert_db_1_to_2.sh  convert_db_2_to_3.sh  convert_db_3_to_4.sh  convert_db_4_to_5.sh  convert_db_5_to_6.sh  convert_db_6_to_7.sh  convert_db_7_to_8.sh  pressure.py  serve_reports.py  simulate_tty.pl  update_rain.sh
share/: CMakeLists.txt
src/: CMakeLists.txt  groups.dox
src/common/: CMakeLists.txt  configuration.cc  configuration.h  consoleprogress.cc  consoleprogress.h  database.cc  database.h  dataset.cc  dataset.h  datasocket.cc  datasocket.h  dbaccess.cc  dbaccess.h  error.cc  error.h  httprequest.cc  httprequest.h  lockfile.cc  lockfile.h  progressnotifier.h  translation.h  utils.cc  utils.h  veteroapplication.cc  veteroapplication.h  weather.cc  weather.h
src/vetero-db/: CMakeLists.txt  main.cc  veterodb.cc  veterodb.h
src/vetero-displayd/: CMakeLists.txt  charset.cc  charset.h  font_6x8.h  font_6x8_bold.h  hd44780-charmap.h  main.cc  serdisplibdisplay.cc  serdisplibdisplay.h  vetero_displayd.cc  vetero_displayd.h
src/vetero-reportgen/: CMakeLists.txt  calendar.cc  calendar.h  currentreportgenerator.cc  currentreportgenerator.h  dayreportgenerator.cc  dayreportgenerator.h  gnuplot.cc  gnuplot.h  htmldocument.cc  htmldocument.h  indexgenerator.cc  indexgenerator.h  main.cc  monthreportgenerator.cc  monthreportgenerator.h  nameprovider.cc  nameprovider.h  reportgenerator.cc  reportgenerator.h  validdatacache.cc  validdatacache.h  vetero_reportgen.cc  vetero_reportgen.h  yearreportgenerator.cc  yearreportgenerator.h
src/veterod/: CMakeLists.txt  childprocesswatcher.cc  childprocesswatcher.h  clouduploader.cc  clouduploader.h  datareader.cc  datareader.h  main.cc  pressurereader.cc  pressurereader.h  veterod.cc  veterod.h
